# CFB-Simulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  coach.h  coachesOrg.h  coachlogs.h  firstNames.txt  gameManager.h  gamePlayExecutor.h  gamePlayer.h  league.h  loadData.h  main.cpp  news.h  numberMaker.h  player.h  recruit.h  recruitLounge.h  roster.h  school.h  testmain.cpp  util.h
coaches/: coach.h  coachlogs.h
data/: cities.csv  coachNames.txt  lastNames.txt  schools.csv  states.csv
games/: gameManager.h  gamePlayExecutor.h  gamePlayer.h  numberMaker.h
league/: scheduler.h  schoolRanker.h
players/: player.h  roster.h
recruits/: recruit.h  recruitLounge.h
src/: driver.h  school.h  util.h
src/coaches/: coach.h  coachesOrg.h
src/games/: gamePlayExecutor.h  gamePlayer.h
src/league/: league.h  scheduler.h  schoolRanker.h
src/players/: player.h  roster.h
src/recruits/: recruit.h  recruitLounge.h
tests/: testGameManager.h  testMain.cpp  testPlayer.h  testSchool.h
tests/recruits/: testRecruits.h
